src/App.css
body {
  background-color: #efebdd;
}

/* h1 {
  display: block;
  font-size: 2em;
  margin-block-start: 0.5em;
  margin-block-end: 0.5em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  font-weight: bold;
} */

.App {
  text-align: center;
  max-width: 728px;
  margin: 0 auto;
}

.App-header {
  background-color: #efebdd;
  height: 9vh;
  min-height: 50px;
  color: white;
  position: fixed;
  width: 100%;
  max-width: 728px;
  top: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  z-index: 99;
  padding: 10px;
  box-sizing: border-box;
}

.App section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 100vh;
  background-color: #ffce81;
}

main {
  padding: 10px;
  height: 80vh;
  margin: 9vh 0 10vh;
  overflow-y: scroll;
  display: flex;
  flex-direction: column;
}

main::-webkit-scrollbar {
  width: 0.25rem;
}

main::-webkit-scrollbar-track {
  background: rgba(0, 0, 0, 0.5);
}

main::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.3);
  height: 50px;
}

form {
  height: 9vh;
  position: fixed;
  bottom: 0;
  background-color: #efebdd;
  width: 100%;
  max-width: 728px;
  display: flex;
  font-size: 1.5rem;
}

form button {
  font-size: 1rem;
  width: 30%;
  padding: 0;
  background-color: #CAA892;
  border: 1;
  border-color: rgba(255, 255, 255, 0.3);
  margin-top: 10;
  margin-bottom: 10;
  
}


input {
  line-height: 1.5;
  width: 100%;
  font-size: 1.5rem;
  background: #efebdd;
  color: black;
  outline: none;
  border: none;
  padding: 0 10px;
  border-radius: 0;
  -webkit-border-radius: 0;
  -moz-border-radius: 0
}

button {
  background-color: #CAA892;
  border: 1;
  border-color: rgba(255, 255, 255, 0.3);
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
  font-size: 1.25rem;
  border-radius: 0;
  -webkit-border-radius: 0;
  -moz-border-radius: 0
  }

button:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}


.sign-in {
  color: #282c34;
  background: white;
  max-width: 400px;
  margin: 0 auto;
}




ul, li {
  text-align: left;
  list-style: none;
}

p {
  max-width: 500px;
  margin-bottom: 12px;
  line-height: 24px;
  padding: 10px 20px;
  border-radius: 25px;
  position: relative;
  color: white;
  text-align: center;
}

.message {
  display: flex;
  align-items: center;
}


.sent {
  flex-direction: row-reverse;
}

.sent p {
  color: black;
  background: white;
  align-self: flex-end;
}
.received p {
  background: white;
  color: black;
}

img {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  margin: 2px 5px;
}

